# openapi.yaml
@@ -85,24 +85,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/FileUploadResponse'
 
-  /files/:
-    get:
-      summary: List available files
-      operationId: listFiles
-      responses:
-        '200':
-          description: List of available files
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  files:
-                    type: array
-                    items:
-                      type: string
-                    example: ["file1.txt", "report.pdf"]
-
 
 components:
   schemas:
